--- a/build
+++ b/build
@@ -1,1 +1,2 @@
-../../bin/rapydscript compiler.pyj -o compiler.js -b -p && mv compiler.js output/
+../../bin/rapydscript compiler.pyj -o compiler.js -b -p && mv compiler.js output/static/rapydscript
+
